Various findbugs fixes